--- a/style.css
+++ b/style.css
@@ -41,13 +41,16 @@ li{
     font-size: 32px;
     padding: 23px;
 }
+a{
+    color: white;
+}
 ul{
     display: flex;
 }
-li:hover{
+a:hover{
     cursor: pointer;
-    text-shadow: 4px 6px 7px;
-    color: white;
+    text-shadow: 9px 9px 9px;
+    color: rgb(75, 35, 116);
 }
 .pt1{
     box-sizing: border-box;
@@ -55,7 +58,7 @@ li:hover{
     position: absolute;
     width: 768px;
     height: 640px;
-    margin-top: 150px;
+    margin-top: 100px;
     margin-left: 50px;
     
     border: 5px solid #FFFFFF;
@@ -140,12 +143,127 @@ li:hover{
     border: 4px solid #FFFFFF;
     border-radius: 27px;
     font-family: 'Reem Kufi Ink';
+    align:left;
+    padding: 46px;
     justify-content: center;
     align-items: center;
-    padding: 43px;
-    align:left;
-
 }
+.pt2{
+    box-sizing: border-box;
+    position: absolute;;
+    left: 61%;
+    top: 54.12%;
+    bottom: 0%;
+    width: 512px;
+    height: 136px;
+    border: 5px solid #FFFFFF;
+    border-radius: 27px;
+    color: white;
+    font-family: 'Reem Kufi Ink';
+    display: flex;
+    padding: 23px;
+    align-items: center;
+}
+.pt3{
+    box-sizing: border-box;
+    position: absolute;;
+    left: 61%;
+    top: 74.12%;
+    bottom: 0%;
+    width: 512px;
+    height: 156px;
+    border: 5px solid #FFFFFF;
+    border-radius: 27px;
+    color: white;
+    font-family: 'Reem Kufi Ink';
+    display: flex;
+    padding: 23px;
+    align-items: center;
+}
+#bolafoda4{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 17px;
+    height: 15px;
+    left: 17px;
+    right: 93.51%;
+    top: 13px;
+    bottom: 80.14%;
+    border-radius: 100px ;
+
+    background: #FF0000; 
+}
+#bolafoda5{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 17px;
+    height: 15px;
+    left: 46px;
+    right: 93.51%;
+    top: 13px;
+    bottom: 80.14%;
+    border-radius: 100px ;
+
+    background: #FFE603; 
+}
+#bolafoda6{
+        box-sizing: border-box;
     
-
-
+        position: absolute;
+        width: 17px;
+        height: 15px;
+        left: 75px;
+        right: 93.51%;
+        top: 13px;
+        bottom: 80.14%;
+        border-radius: 100px ;
+    
+        background: #00FF38;
+}
+#linha1{
+    position: absolute;
+    width: 502px;
+    left: 0%;
+    right: 0.95%;
+    top: 37px;
+    bottom: 73.76%;
+    
+    border: 4px solid #FFFFFF;
+}
+#texto{
+    position: absolute;
+    left: 4.77%;
+    right: 87.98%;
+    top: 42.55%;
+    bottom: 57.45%;
+    padding-top: 13px;
+    
+    font-family: 'Reem Kufi Ink';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 0%;
+    color:#00FF38;
+}
+.linha{
+    width: 100%;
+    position: absolute;
+    border: 5px solid white;
+    top: 91.35%;
+}
+#texto1{
+    position:absolute;
+    left: 17px;
+    top: 94%;
+    color:white;
+    font-family: 'Reem Kufi Ink';
+    font-size: 32px;
+}
+#lua{
+    width: 385px;
+    height: 385px;
+    margin-left: 64%;
+    
+}
