--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ ul{
 
 #bola{
     border: 3px solid black;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.307);
     width: 110px;
     height: 110px;
     border-radius: 75px;
@@ -107,7 +107,6 @@ a:hover{
     width: 763px;
 
     border: 4px solid #FFFFFF;
-    transform: matrix(1, 0, 0, 1, 0, 0);
 }
 .caixadetexto1{
     box-sizing: border-box;
