--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ ul{
     width: 110px;
     height: 110px;
     border-radius: 75px;
-    margin-left: 50px;
+    margin-left: 3rem;
 }
 header img{
     width: 100px;
@@ -31,7 +31,7 @@ header{
     width: 100%;
     border: 5px solid white;
     display: flex;
-    border-radius: 73px;
+    border-radius: 73rem;
     justify-content: space-between;
     display: flex;
     align-items: center;
@@ -40,7 +40,7 @@ li{
     list-style: none;
     font-style: normal;
     font-size: 32px;
-    padding: 23px;
+    padding: 1rem;
 }
 a{
     color: white;
@@ -58,13 +58,13 @@ a:hover{
     box-sizing: border-box;
 
     position: absolute;
-    width: 768px;
-    height: 640px;
-    margin-top: 100px;
-    margin-left: 50px;
+    width: 48rem;
+    height: 40rem;
+    margin-top: 5rem;
+    margin-left: 3rem;
     
     border: 5px solid #FFFFFF;
-    border-radius: 31px;
+    border-radius: 4rem;
     animation-name: pt1;
     animation-duration: 3s;  
     animation-fill-mode: forwards;
@@ -121,7 +121,7 @@ a:hover{
     box-sizing: border-box;
 
     position: absolute;
-    left: 3.58%;
+    left: 2rem;
     right: 17.3%;
     top: 14.6%;
     bottom: 71.24%;
@@ -129,11 +129,11 @@ a:hover{
     height: 90.62px;
     color:#0084FE;
 
-    border: 4px solid #FFFFFF;
-    border-radius: 27px;
+    border: 0.3rem solid #FFFFFF;
+    border-radius: 2rem;
     font-family: 'Reem Kufi Ink';
     align:left;
-    padding: 23px;
+    padding: 1rem;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -142,30 +142,30 @@ a:hover{
     box-sizing: border-box;
 
     position: absolute;
-    left: 3.59%;
-    right: 10.4%;
-    top: 31.29%;
+    left: 2rem;
+    right: 17.3%;
+    top: 12rem;
     bottom: 40.29%;
     color:#0084FE;
 
-    border: 4px solid #FFFFFF;
-    border-radius: 27px;
+    border: 0.3rem solid #FFFFFF;
+    border-radius: 2rem;
     font-family: 'Reem Kufi Ink';
     align:left;
-    padding: 46px;
+    padding: 1.5rem;
     justify-content: center;
     align-items: center;
 }
 .pt2{
     box-sizing: border-box;
     position: absolute;;
-    left: 61%;
+    left: 73rem;
     top: 54.12%;
     bottom: 0%;
     width: 512px;
     height: 136px;
     border: 5px solid #FFFFFF;
-    border-radius: 27px;
+    border-radius: 2rem;
     color: white;
     font-family: 'Reem Kufi Ink';
     display: flex;
@@ -182,13 +182,13 @@ a:hover{
 .pt3{
     box-sizing: border-box;
     position: absolute;;
-    left: 61%;
-    top: 74.12%;
+    left: 73rem;
+    top: 74.12rem;
     bottom: 0%;
-    width: 512px;
-    height: 156px;
+    width: 32rem;
+    height: 9.4rem;
     border: 5px solid #FFFFFF;
-    border-radius: 27px;
+    border-radius: 2rem;
     color: white;
     font-family: 'Reem Kufi Ink';
     display: flex;
@@ -246,7 +246,7 @@ a:hover{
 }
 #linha1{
     position: absolute;
-    width: 502px;
+    width: 31.5rem;
     left: 0%;
     right: 0.95%;
     top: 37px;
@@ -258,9 +258,9 @@ a:hover{
     position: absolute;
     left: 4.77%;
     right: 87.98%;
-    top: 42.55%;
+    top: 3.6rem;
     bottom: 57.45%;
-    padding-top: 13px;
+    padding-top: 0.5rem;
     
     font-family: 'Reem Kufi Ink';
     font-style: normal;
@@ -285,20 +285,20 @@ a:hover{
     width: 100%;
     position: absolute;
     border: 5px solid white;
-    top: 47vw;
+    top: 56rem;
 }
 #texto1{
     position:absolute;
-    left: 17px;
-    top: 47.6vw;
+    left: 2.77rem;
+    top: 57rem;
     color:white;
     font-family: 'Reem Kufi Ink';
     font-size: 32px;
 }
 #lua{
-    width: 385px;
-    height: 385px;
-    margin-left: 64%;
+    width: 23rem;
+    height: 23rem;
+    margin-left: 77rem;
     animation: lua 8s linear infinite;
     animation-name: lua;
     animation-duration: 3s;
@@ -316,3 +316,4 @@ a:hover{
     }
     from{top:0px;}
     to{top:74.12%;}
+}
