--- a/style.css
+++ b/style.css
@@ -17,14 +17,14 @@ ul{
 #bola{
     border: 3px solid black;
     background-color: rgb(255, 255, 255);
-    width: 110px;
-    height: 110px;
+    width: 7rem;
+    height: 7rem;
     border-radius: 75px;
     margin-left: 3rem;
 }
 header img{
-    width: 100px;
-    height: 100px;
+    width: 6.4rem;
+    height: 6.9rem;
     display: flex;
 }
 header{
@@ -35,6 +35,13 @@ header{
     justify-content: space-between;
     display: flex;
     align-items: center;
+    animation-name: header;
+    animation-duration: 3s;  
+    animation-fill-mode: forwards;
+}
+@keyframes header{
+    from{top:0px;}
+    to{top:54.12%;}
 }
 li{
     list-style: none;
@@ -60,18 +67,19 @@ a:hover{
     position: absolute;
     width: 48rem;
     height: 40rem;
-    margin-top: 5rem;
-    margin-left: 3rem;
+    top: 15rem;
+    left: 4rem;
     
     border: 5px solid #FFFFFF;
     border-radius: 4rem;
     animation-name: pt1;
     animation-duration: 3s;  
-    animation-fill-mode: forwards;
+    animation-fill-mode: left;
 }
 @keyframes pt1{
-    from {top: 0px;}
-    to{top: 100px;}
+    0% {left: -100%;}
+    50%{left: 15rem;}
+    100%{left: 4rem;}
 }
 #bolafoda1{
     box-sizing: border-box;
@@ -158,9 +166,9 @@ a:hover{
 }
 .pt2{
     box-sizing: border-box;
-    position: absolute;;
+    position: absolute;
     left: 73rem;
-    top: 54.12%;
+    top: 15rem;
     bottom: 0%;
     width: 512px;
     height: 136px;
@@ -242,14 +250,14 @@ a:hover{
         bottom: 80.14%;
         border-radius: 100px ;
     
-        background: #00FF38;
+        background: #00ff37;
 }
 #linha1{
     position: absolute;
     width: 31.5rem;
     left: 0%;
     right: 0.95%;
-    top: 37px;
+    top: 1.9rem;
     bottom: 73.76%;
     
     border: 4px solid #FFFFFF;
@@ -268,11 +276,11 @@ a:hover{
     font-size: 32px;
     line-height: 0%;
     color:#00FF38;
-    animation: animate 0.5s linear infinite;
+    animation: animate 1s linear infinite;
 }
 @keyframes animate{
     0%{
-        opacity: 0;
+        opacity: 0.1;
     }
     50%{
         opacity: 0.7;
@@ -284,8 +292,15 @@ a:hover{
 .linha{
     width: 100%;
     position: absolute;
-    border: 5px solid white;
+    border: 3px solid white;
     top: 56rem;
+    animation-name: linha;
+    animation-duration: 3s;  
+    animation-fill-mode: forwards;
+}
+@keyframes linha{
+    from{top:0px;}
+    to{top:92.62%;}
 }
 #texto1{
     position:absolute;
@@ -294,6 +309,13 @@ a:hover{
     color:white;
     font-family: 'Reem Kufi Ink';
     font-size: 32px;
+    animation-name: texto1;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+}
+@keyframes texto1{
+    from{top:0px;}
+    to{top:94.62%;}
 }
 #lua{
     width: 23rem;
