--- a/style.css
+++ b/style.css
@@ -14,24 +14,19 @@ ul{
     font-family: 'Reem Kufi Ink';
 }
 
-#bola{
-    border: 3px solid black;
-    background-color: rgb(255, 255, 255);
-    width: 7rem;
-    height: 7rem;
-    border-radius: 75px;
-    margin-left: 3rem;
-}
-header img{
-    width: 6.4rem;
-    height: 6.9rem;
+
+
+#avatar{
+    width: 5vw;
+    height: 5vw;
     display: flex;
+    border-radius: 78px;
+    margin-left: 4vw;
 }
 header{
     width: 100%;
-    border: 5px solid white;
     display: flex;
-    border-radius: 73rem;
+    border-radius: 73px;
     justify-content: space-between;
     display: flex;
     align-items: center;
@@ -47,10 +42,11 @@ li{
     list-style: none;
     font-style: normal;
     font-size: 32px;
-    padding: 1rem;
+    padding: 1vw;
 }
 a{
     color: white;
+    text-decoration: none;
 }
 ul{
     display: flex;
@@ -65,13 +61,13 @@ a:hover{
     box-sizing: border-box;
 
     position: absolute;
-    width: 48rem;
-    height: 40rem;
-    top: 15rem;
-    left: 4rem;
+    width: 40vw;
+    height: 66vh;
+    top: 12.5vw;
+    left: 3vw;
     
     border: 5px solid #FFFFFF;
-    border-radius: 4rem;
+    border-radius: 56px;
     animation-name: pt1;
     animation-duration: 3s;  
     animation-fill-mode: left;
@@ -129,19 +125,19 @@ a:hover{
     box-sizing: border-box;
 
     position: absolute;
-    left: 2rem;
+    left: 2vw;
     right: 17.3%;
     top: 14.6%;
     bottom: 71.24%;
-    width: 34rem;
-    height: 5.6rem;
+    width: 28vw;
+    height: 9vh;
     color:#0084FE;
 
     border: 0.3rem solid #FFFFFF;
-    border-radius: 2rem;
+    border-radius: 23px;
     font-family: 'Reem Kufi Ink';
     align:left;
-    padding: 1rem;
+    padding: 1vw;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -150,25 +146,24 @@ a:hover{
     box-sizing: border-box;
 
     position: absolute;
-    left: 2rem;
+    left: 2vw;
     right: 17.3%;
-    top: 12rem;
+    top: 10vw;
     bottom: 40.29%;
     color:#0084FE;
 
     border: 0.3rem solid #FFFFFF;
-    border-radius: 2rem;
+    border-radius: 23px;
     font-family: 'Reem Kufi Ink';
     align:left;
-    padding: 1.5rem;
+    padding: 1vw;
     justify-content: center;
     align-items: center;
 }
 .pt2{
     box-sizing: border-box;
     position: absolute;
-    right: 15rem;
-    top: 32rem;
+    top: 30vw;
     bottom: 0%;
     width: 512px;
     height: 136px;
@@ -256,7 +251,7 @@ a:hover{
 }
 #linha1{
     position: absolute;
-    width: 31.5rem;
+    width: 26.3vw;
     left: 0%;
     right: 0.95%;
     top: 1.9rem;
@@ -306,7 +301,7 @@ a:hover{
 }
 #texto1{
     position:absolute;
-    left: 2.77rem;
+    left: 3rem;
     top: 57rem;
     color:white;
     font-family: 'Reem Kufi Ink';
@@ -320,9 +315,8 @@ a:hover{
     to{top:94.62%;}
 }
 #lua{
-    width: 23rem;
-    height: 23rem;
-    margin-left: 77rem;
+    width: 23vw;
+    margin-left: 63vw;
     animation: lua 8s linear infinite;
     animation-name: lua;
     animation-duration: 3s;
